--- a/MasterThesis_proposal/references.bib
+++ b/MasterThesis_proposal/references.bib
@@ -1,471 +1,132 @@
-@thesis{Artner2007,
-	author={Artner, Nicole Maria},
-	title={Analyse und Reimplementierung des Mean-Shift Tracking-Verfahrens},
-	type={Diplomarbeit},
-	year={2007},
-	month={7},
-	institution={University of Applied Sciences Upper Austria, Digitale Medien},
-	location={Hagenberg, Austria},
-	url={http://theses.fh-hagenberg.at/thesis/Artner07},
-	hyphenation={german}
+
+@misc{noauthor_enabling_nodate,
+	title = {Enabling the {Intel} {FPGA} {SDK} for {OpenCL} {Channels} for {OpenCL} {Kernel}},
+	url = {https://www.intel.com/content/www/us/en/programmable/documentation/mwh1391807965224/ewa1411503895045/ewa1411747396740/ewa1411748206225.html},
+	urldate = {2018-10-12},
+	file = {Enabling the Intel FPGA SDK for OpenCL Channels for OpenCL Kernel:/home/gauravks/Zotero/storage/GSVYGIGQ/ewa1411748206225.html:text/html}
 }
 
-@thesis{Bacher2004,
-	author={Bacher, Florian},
-	title={Interaktionsmöglichkeiten mit Bildschirmen und großflächigen Projektionen},
-	type={Bachelorarbeit},
-	year={2004},
-	month={6},
-	institution={University of Applied Sciences Upper Austria, Medientechnik und {-design}},
-	location={Hagenberg, Austria},
-	hyphenation={german}
+@inproceedings{weerasinghe_network-attached_2016,
+	title = {Network-attached {FPGAs} for data center applications},
+	doi = {10.1109/FPT.2016.7929186},
+	abstract = {FPGAs (Field Programmable Gate Arrays) are making their way into data centers (DC). They are used as accelerators to boost the compute power of individual server nodes and to improve the overall power efficiency. However, this approach limits the number of FPGAs per node and hinders the acceleration of large-scale distributed applications. We propose a system architecture to deploy large-scale DC applications on standalone FPGAs, independently of the number of CPUs. In our architecture, the FPGAs are directly attached to the DC network, making the FPGA infrastructure scalable and flexible. This FPGA infrastructure enables the creation of flexible multi-FPGA fabrics by connecting several FPGAs together over the DC network. We implemented a prototype of the network-attached FPGA and ported a distributed text-analytics application onto such a multi-FPGA fabric. We compared our approach with a SW-only implementation and an implementation accelerated with PCIeattached FPGAs. The results show that the network-attached FPGAs outperform both other implementations by large margins.},
+	booktitle = {2016 {International} {Conference} on {Field}-{Programmable} {Technology} ({FPT})},
+	author = {Weerasinghe, J. and Polig, R. and Abel, F. and Hagleitner, C.},
+	month = dec,
+	year = {2016},
+	keywords = {computer centres, data center, data center applications, DC network, distributed computing, distributed text-analytics application, Fabrics, field programmable gate arrays, Field programmable gate arrays, flexible multiFPGA fabrics, large-scale DC applications, multi-FPGA fabric, network-attached FPGA, network-attached FPGAs, Ports (Computers), power aware computing, power efficiency, Protocols, Prototypes, Scalability, Servers},
+	pages = {36--43},
+	file = {IEEE Xplore Abstract Record:/home/gauravks/Zotero/storage/6KY2MYJC/7929186.html:text/html;IEEE Xplore Full Text PDF:/home/gauravks/Zotero/storage/9CC4DH86/Weerasinghe et al. - 2016 - Network-attached FPGAs for data center application.pdf:application/pdf}
 }
 
-@manual{Bezos2016,
-	author={Bezos, Javier and Braams, Johannes L.},
-	title={Babel -- Multilingual support for Plain \TeX\ or \LaTeX},
-	year={2016},
-	month={4},
-	version={3.9r},
-	url={http://mirrors.ctan.org/macros/latex/required/babel/base/babel.pdf},
-	hyphenation={english}
+@misc{noauthor_low_nodate,
+	title = {Low {Latency} 40- and 100-{Gbps} {Ethernet} {MAC} and {PHY} {MegaCore} {Function} {User} {Guide}},
+	url = {https://www.intel.com/content/www/us/en/programmable/documentation/nik1411172688901.html},
+	urldate = {2018-10-09},
+	file = {Low Latency 40- and 100-Gbps Ethernet MAC and PHY MegaCore Function User Guide:/home/gauravks/Zotero/storage/PGSRP4BZ/nik1411172688901.html:text/html}
 }
 
-@incollection{BurgeBurger1999,
-	author={Burge, Mark and Burger, Wilhelm},
-	title={Ear Biometrics},
-	booktitle={Biometrics: Personal Identification in Networked Society},
-	publisher={Kluwer Academic Publishers},
-	year={1999},
-	location={Boston},
-	editor={Jain, Anil K. and Bolle, Ruud and Pankanti, Sharath},
-	chapter={13},
-	pages={273-285},
-	hyphenation={english}
+@inproceedings{kobayashi_opencl-ready_2018,
+	address = {New York, NY, USA},
+	series = {{HPC} {Asia} 2018},
+	title = {{OpenCL}-ready {High} {Speed} {FPGA} {Network} for {Reconfigurable} {High} {Performance} {Computing}},
+	isbn = {978-1-4503-5372-4},
+	url = {http://doi.acm.org/10.1145/3149457.3149479},
+	doi = {10.1145/3149457.3149479},
+	abstract = {Field programmable gate arrays (FPGAs) have gained attention in high-performance computing (HPC) research because their computation and communication capabilities have dramatically improved in recent years as a result of improvements to semiconductor integration technologies that depend on Moore's Law. In addition to FPGA performance improvements, OpenCL-based FPGA development toolchains have been developed and offered by FPGA vendors, which reduces the programming effort required as compared to the past. These improvements reveal the possibilities of realizing a concept to enable on-the-fly offloading computation at which CPUs/GPUs perform poorly to FPGAs while performing low-latency data movement. We think that this concept is one of the keys to more improve the performance of modern heterogeneous supercomputers using accelerators like GPUs. In this paper, we propose high-performance inter-FPGA Ethernet communication using OpenCL and Verilog HDL mixed programming in order to demonstrate the feasibility of realizing this concept. OpenCL is used to program application algorithms and data movement control when Verilog HDL is used to implement low-level components for Ethernet communication. Experimental results using ping-pong programs showed that our proposed approach achieves a latency of 0.99 μs and as much as 4.97 GB/s between FPGAs over different nodes, thus confirming that the proposed method is effective at realizing this concept.},
+	urldate = {2018-10-09},
+	booktitle = {Proceedings of the {International} {Conference} on {High} {Performance} {Computing} in {Asia}-{Pacific} {Region}},
+	publisher = {ACM},
+	author = {Kobayashi, Ryohei and Oobata, Yuma and Fujita, Norihisa and Yamaguchi, Yoshiki and Boku, Taisuke},
+	year = {2018},
+	keywords = {Accelerator computing, BSP, Ethernet communication, FPGA, Heterogeneous cluster, I/O channels, Interconnect for accelerators, OpenCL, QSFP+, Verilog HDL},
+	pages = {192--201},
+	file = {ACM Full Text PDF:/home/gauravks/Zotero/storage/3LUKXCBW/Kobayashi et al. - 2018 - OpenCL-ready High Speed FPGA Network for Reconfigu.pdf:application/pdf}
 }
 
-@inproceedings{Burger1987,
-	author={Burger, Wilhelm and Bhanu, Bir},
-	title={Qualitative Motion Understanding},
-	booktitle={Proceedings of the Intl.\ Joint Conference on Artificial Intelligence},
-	year={1987},
-	month={5},
-	editor={McDermott, John P.},
-	venue={Milano},
-	publisher={Morgan Kaufmann Publishers},
-	location={San Francisco},
-	pages={819-821},
-	hyphenation={english}
+@inproceedings{hauck_mesh_1994,
+	title = {Mesh routing topologies for multi-{FPGA} systems},
+	doi = {10.1109/ICCD.1994.331882},
+	abstract = {There is currently great interest in using fixed arrays of FPGAs for logic emulators, custom computing devices, and software accelerators. An important part of designing such a system is determining the proper routing topology to use to interconnect the FPGAs. This topology can have a great effect on the area and delay of the resulting system. Tree, bipartite graph, and mesh inter-connection schemes have all been proposed for use in FPGA-based systems. In this paper we examine mesh interconnection schemes, and propose several constructs for more efficient topologies. These reduce inter-chip delays by more than 60\% over the basic 4-way Mesh.{\textless}{\textless}ETX{\textgreater}{\textgreater}},
+	booktitle = {Proceedings 1994 {IEEE} {International} {Conference} on {Computer} {Design}: {VLSI} in {Computers} and {Processors}},
+	author = {Hauck, S. and Borriello, G. and Ebeling, C.},
+	month = oct,
+	year = {1994},
+	keywords = {Field programmable gate arrays, 4-way Mesh, area, bipartite graph, Bipartite graph, Circuit simulation, custom computing devices, delay, Delay, delays, fixed arrays, graph theory, Integrated circuit interconnections, inter-chip delays, logic arrays, Logic arrays, logic design, Logic design, logic emulators, mesh inter-connection schemes, mesh interconnection schemes, mesh routing topologies, multi-FPGA systems, network routing, Network topology, Routing, routing topology, software accelerators, tree, Tree graphs, trees (mathematics)},
+	pages = {170--177},
+	file = {IEEE Xplore Abstract Record:/home/gauravks/Zotero/storage/SSWIXL6N/331882.html:text/html;IEEE Xplore Full Text PDF:/home/gauravks/Zotero/storage/29MUC7P7/Hauck et al. - 1994 - Mesh routing topologies for multi-FPGA systems.pdf:application/pdf}
 }
 
-@book{BurgerBurge2015,
-	author={Burger, Wilhelm and Burge, Mark James},
-	title={Digitale Bildverarbeitung},
-	subtitle={Eine algorithmische Einführung mit Java},
-	publisher={Springer},
-	location={Heidelberg},
-	edition={3},
-	year={2015},
-	hyphenation={german}
+@inproceedings{abed_design_2012,
+	title = {Design and implementation of interfacing two {FPGAs}},
+	doi = {10.1109/INNOVATIONS.2012.6207777},
+	abstract = {As FPGA performance and capabilities have increased substantially in recent years, FPGA-based designs are employed to implement complex functions and designs. The objective of our work is to design an interface between two FPGAs using I/O interface available inside FPGAs for the purpose of reliable communication. The two FPGAs will be connected via RS-232 port, to transfer data from one FPGA to another and vice versa. Our goal is to get a simple and reliable connection when two FPGAs communicate. The data information is created using Random Number Generator. We implemented our design using two Altera FPGA boards, implemented in Verilog™ language. Dynamic simulations were performed to verify the correctness of transmitted data. We had proposed a dice game as an application to show how two FPGAs can send and receive data to each other in full duplex direction. The two players generate a random number using Linear Feedback Shift Register (LFSR) algorithm then send their number to each other using RS-232 cross cable. Finally, the values are compared and whoever gets the larger number wins the game.},
+	booktitle = {2012 {International} {Conference} on {Innovations} in {Information} {Technology} ({IIT})},
+	author = {Abed, S. and Mohd, B. J. and Alnaami, B. and Alouneh, S.},
+	month = mar,
+	year = {2012},
+	keywords = {field programmable gate arrays, Field programmable gate arrays, FPGA, Integrated circuit interconnections, logic design, Communication, data information, dice game, FPGA based designs, full duplex direction, Games, Hardware, I/O interface, LFSR, linear feedback shift register, peripheral interfaces, random number generation, random number generator, Receivers, reliable communication, RS-232 port, RS232, shift registers, Transmitters, Universal Serial Bus, Verilog™ language},
+	pages = {72--77},
+	file = {IEEE Xplore Abstract Record:/home/gauravks/Zotero/storage/TGS98APY/6207777.html:text/html;IEEE Xplore Full Text PDF:/home/gauravks/Zotero/storage/RFWAHH82/Abed et al. - 2012 - Design and implementation of interfacing two FPGAs.pdf:application/pdf}
 }
 
-@book{BurgerBurge2016,
-	author={Burger, Wilhelm and Burge, Mark James},
-	title={Digital Image Processing},
-	subtitle={An Algorithmic Introduction Using Java},
-	publisher={Springer},
-	location={London},
-	edition={2},
-	year={2016},
-	hyphenation={english}
+@inproceedings{kenter_opencl-based_2018,
+	title = {{OpenCL}-{Based} {FPGA} {Design} to {Accelerate} the {Nodal} {Discontinuous} {Galerkin} {Method} for {Unstructured} {Meshes}},
+	doi = {10.1109/FCCM.2018.00037},
+	abstract = {The exploration of FPGAs as accelerators for scientific simulations has so far mostly been focused on small kernels of methods working on regular data structures, for example in the form of stencil computations for finite difference methods. In computational sciences, often more advanced methods are employed that promise better stability, convergence, locality and scaling. Unstructured meshes are shown to be more effective and more accurate, compared to regular grids, in representing computation domains of various shapes. Using unstructured meshes, the discontinuous Galerkin method preserves the ability to perform explicit local update operations for simulations in the time domain. In this work, we investigate FPGAs as target platform for an implementation of the nodal discontinuous Galerkin method to find time-domain solutions of Maxwell's equations in an unstructured mesh. When maximizing data reuse and fitting constant coefficients into suitably partitioned on-chip memory, high computational intensity allows us to implement and feed wide data paths with hundreds of floating point operators. By decoupling off-chip memory accesses from the computations, high memory bandwidth can be sustained, even for the irregular access pattern required by parts of the application. Using the Intel/Altera OpenCL SDK for FPGAs, we present different implementation variants for different polynomial orders of the method. In different phases of the algorithm, either computational or bandwidth limits of the Arria 10 platform are almost reached, thus outperforming a highly multithreaded CPU implementation by around 2x.},
+	booktitle = {2018 {IEEE} 26th {Annual} {International} {Symposium} on {Field}-{Programmable} {Custom} {Computing} {Machines} ({FCCM})},
+	author = {Kenter, T. and Mahale, G. and Alhaddad, S. and Grynko, Y. and Schmitt, C. and Afzal, A. and Hannig, F. and Förstner, J. and Plessl, C.},
+	month = apr,
+	year = {2018},
+	keywords = {field programmable gate arrays, Field programmable gate arrays, FPGA, OpenCL, logic design, Kernel, Acceleration, data structures, Mathematical model, Arria 10 platform, bandwidth limits, Computational modeling, computational sciences, data paths, data reuse maximization, Discontinuous Galerkin, explicit local update operations, finite difference methods, fitting constant coefficients, Galerkin method, high computational intensity, implementation variants, Intel-Altera OpenCL SDK, Maxwell equations, Maxwell's Equations, mesh generation, Method of moments, nodal discontinuous Galerkin method, OpenCL-based FPGA design, partitioned on-chip memory, polynomial orders, regular data structures, regular grids, Scientific Computing, scientific simulations, stencil computations, time-domain analysis, Time-domain analysis, time-domain solutions, unstructured meshes, Unstructured Meshes},
+	pages = {189--196},
+	file = {IEEE Xplore Abstract Record:/home/gauravks/Zotero/storage/V7UQMGTM/8457652.html:text/html;IEEE Xplore Full Text PDF:/home/gauravks/Zotero/storage/WCTLIDYL/Kenter et al. - 2018 - OpenCL-Based FPGA Design to Accelerate the Nodal D.pdf:application/pdf}
 }
 
-@manual{Carlisle2016,
-	author={Carlisle, D. P.},
-	title={Packages in the {`graphics'} bundle},
-	year={2016},
-	month={12},
-	url={http://mirrors.ctan.org/macros/latex/required/graphics/grfguide.pdf},
-	hyphenation={english},
+@inproceedings{afzal_solving_2018,
+	title = {Solving {Maxwell}'s {Equations} with {Modern} {C}++ and {SYCL}: {A} {Case} {Study}},
+	shorttitle = {Solving {Maxwell}'s {Equations} with {Modern} {C}++ and {SYCL}},
+	doi = {10.1109/ASAP.2018.8445127},
+	abstract = {In scientific computing, unstructured meshes are a crucial foundation for the simulation of real-world physical phenomena. Compared to regular grids, they allow resembling the computational domain with a much higher accuracy, which in turn leads to more efficient computations. There exists a wealth of supporting libraries and frameworks that aid programmers with the implementation of applications working on such grids, each built on top of existing parallelization technologies. However, many approaches require the programmer to introduce a different programming paradigm into their application or provide different variants of the code. SYCL is a new programming standard providing a remedy to this dilemma by building on standard C++ 17 with its so-called single-source approach: Programmers write standard C++ code and expose parallelism using C++ 17 keywords. The application is then transformed into a concrete implementation by the SYCL implementation. By encapsulating the OpenCL ecosystem, different SYCL implementations enable not only the programming of CPUs but also of heterogeneous platforms such as GPUs or other devices. For the first time, this paper showcases a SY CL-based solver for the nodal Discontinuous Galerkin method for Maxwell's equations on unstructured meshes. We compare our solution to a previous C-based implementation with respect to programmability and performance on heterogeneous platforms.},
+	booktitle = {2018 {IEEE} 29th {International} {Conference} on {Application}-specific {Systems}, {Architectures} and {Processors} ({ASAP})},
+	author = {Afzal, A. and Schmitt, C. and Alhaddad, S. and Grynko, Y. and Teich, J. and Forstner, J. and Hannig, F.},
+	month = jul,
+	year = {2018},
+	keywords = {Libraries, Programming, Mathematical model, Galerkin method, Maxwell equations, Method of moments, regular grids, unstructured meshes, aid programmers, C++ language, C++ languages, case study, computational domain, concrete implementation, crucial foundation, different programming paradigm, different variants, efficient computations, frameworks, heterogeneous platforms, libraries, Maxwell's equations, nodal Discontinuous Galerkin method, OpenCL ecosystem, parallelization technologies, physics computing, programming standard, real-world physical phenomena, scientific computing, single-source approach, standard C++ code, Standards, SYCL implementation},
+	pages = {1--8},
+	file = {IEEE Xplore Abstract Record:/home/gauravks/Zotero/storage/6RR6CSMQ/8445127.html:text/html;IEEE Xplore Full Text PDF:/home/gauravks/Zotero/storage/HVBIP6CH/Afzal et al. - 2018 - Solving Maxwell's Equations with Modern C++ and SY.pdf:application/pdf}
 }
 
-@image{CocaCola1940,
-	author={Wolcott, Marion Post},
-	title={Natchez, Miss.},
-	note={Library of Congress Prints and Photographs Division Washington, Farm Security Administration/Office of War Information Color Photographs},
-	year={1940},
-	month={8},
-	url={http://www.loc.gov/pictures/item/fsa1992000140/PP/}
+@book{hesthaven_nodal_2008,
+	address = {New York},
+	series = {Texts in applied mathematics},
+	title = {Nodal discontinuous {Galerkin} methods: algorithms, analysis, and applications},
+	isbn = {978-0-387-72065-4 978-0-387-72067-8},
+	shorttitle = {Nodal discontinuous {Galerkin} methods},
+	abstract = {This book discusses a family of computational methods, known as discontinuous Galerkin methods, for solving partial differential equations. While these methods have been known since the early 1970s, they have experienced an almost explosive growth interest during the last ten to fifteen years, leading both to substantial theoretical developments and the application of these methods to a broad range of problems. These methods are different in nature from standard methods such as finite element or finite difference methods, often presenting a challenge in the transition from theoretical developments to actual implementations and applications. This book is aimed at graduate level classes in applied and computational mathematics. The combination of an in depth discussion of the fundamental properties of the discontinuous Galerkin computational methods with the availability of extensive software allows students to gain first hand experience from the beginning without eliminating theoretical insight. Jan S. Hesthaven is a professor of Applied Mathematics at Brown University. Tim Warburton is an assistant professor of Applied and Computational Mathematics at Rice University.},
+	number = {54},
+	publisher = {Springer},
+	author = {Hesthaven, Jan S. and Warburton, Tim},
+	year = {2008},
+	note = {OCLC: ocn191889938},
+	keywords = {Differential equations, Partial, Finite element method, Galerkin methods}
 }
 
-@manual{Cochran2005,
-	author={Cochran, Steven Douglas},
-	title={The {Subfig} Package},
-	year={2005},
-	month={7},
-	url={http://mirrors.ctan.org/macros/latex/contrib/subfig/subfig.pdf},
-	hyphenation={english}
+@article{Hesthaven_190449,
+      title = {Discontinuous Galerkin methods for the time-domain  Maxwell's equations},
+      author = {Hesthaven, J. S. and Warburton, T.},
+      journal = {ACES Newsletter},
+      volume = {19},
+      pages = {10-29},
+      year = {2004},
+      abstract = {We discuss the basic elements of the discontinuous  Galerkin methods for the time-domain Maxwell's equations. A  one-dimensional example is developed in detail from which  the extension to two- and three-dimensional algorithms are  minimal. A few examples are offered as well as guidelines  for extensions, generalizations, and helpful software  resources.},
 }
-
-@manual{Daniel2016,
-	author={Daniel, Marco and Gundlach, Patrick and Schmidt, Walter and Knappen, Jörg and Partl, Hubert and Hyna, Irene},
-	title={\LaTeX2e-Kurzbeschreibung},
-	year={2016},
-	month={11},
-	version={3.0b},
-	url={http://mirrors.ctan.org/info/lshort/german/l2kurz.pdf},
-	hyphenation={german}
-}
-
-@techreport{Drake1948,
-	author={Drake, Huber M. and McLaughlin, Milton D. and Goodman, Harold R.},
-	title={Results obtained during accelerated transonic tests of the {Bell}
-		{XS-1} airplane in flights to a {MACH} number of 0.92},
-	institution={NASA Dryden Flight Research Center},
-	year={1948},
-	month={1},
-	location={Edwards, CA},
-	number={NACA-RM-L8A05A},
-	url={http://www.nasa.gov/centers/dryden/pdf/87528main_RM-L8A05A.pdf},
-	hyphenation={english}
-}
-
-@book{Duden1997,
-	author={Friedrich, Christoph},
-	title={Schriftliche Arbeiten im technisch-natur\-wissen\-schaft\-lichen Studium}, 
-	subtitle={Ein Leitfaden zur effektiven Erstellung und zum Einsatz moderner Arbeitsmethoden},
-	publisher={Bibliographisches Institut},
-	series={Duden Taschenbücher},
-	volume={27},
-	location={Mannheim},
-	year={1997},
-	hyphenation={german}
-}
-
-@thesis{Eberl1987,
-	author={Eberl, Gerhard},
-	title={Automatischer Landeanflug durch Rechnersehen},
-	type={phdthesis},
-	year={1987},
-	month={8},
-	institution={Universität der Bundeswehr, Fakultät für Raum- und Luftfahrttechnik},
-	location={München},
-	hyphenation={german}
-}
-
-@misc{EuRichtlinie2000,
-	author={{Europäische Union}},
-	title={Richtline 2000/14/EG des Europäischen Parlaments und des Rates vom 8.\ Mai 2000 zur 
-		Angleichung der Rechtsvorschriften der Mitgliedstaaten über umweltbelastende Geräuschemissionen 
-		von zur Verwendung im Freien vorgesehenen Geräten und Maschinen},
-	howpublished={Amtsblatt der Europäischen Gemeinschaften, L 162},
-	url={http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CONSLEG:2000L0014:20051227:de:PDF},
-	hyphenation={german}
-}
-
-@book{Faires1934,
-	author={Faires, V. M.},
-	title={Design of Machine Elements},
-	publisher={The Macmillan Company},
-	year={1934},
-	note={Originalausgabe 1920},
-	hyphenation={english}
-}
-
-@online{Feder2006,
-	author={Feder, Alexander},
-	title={{BibTeX.org}},
-	year={2006},
-	url={http://www.bibtex.org/},
-}
-
-@misc{FhStG1993,
-	title={Bundesgesetz über Fachhochschul-Studiengänge},
-	howpublished={BGBl.\ Nr.\ 340/1993, zuletzt geändert mit Bundesgesetz BGBl.\ I Nr.\ 45/2014},
-	url={https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=10009895},
-	hyphenation={german}
-}
-
-@video{Futurama1999,
-	author={Groening, Matt},
-	title={Futurama},
-	titleaddon={Season 1 Collection},
-	howpublished={DVD},
-	year={2002},
-	month={2},
-	note={Twentieth Century Fox Home Entertainment},
-	hyphenation={english}
-}
-
-@article{Guttman2001,
-	author={Guttman, Erik},
-	title={Autoconfiguration for {IP} Networking},
-	journal={IEEE Internet Computing},
-	volume={5},
-	issue={5/6},
-	year={2001},
-	pages={81-86},
-	hyphenation={english}
-}
-
-@book{Hemleben1969,
-	author={Hemleben, Johannes},
-	title={Galilei, Galileo},
-	publisher={rororo},
-	year={1969},
-	edition={20},
-	hyphenation={german}
-}
-
-@book{Higham1998,
-	author={Higham, Nicholas J.},
-	title={Handbook of Writing for the Mathematical Sciences},
-	publisher={Society for Industrial and Applied Mathematics (SIAM)},
-	location={Philadelphia},
-	edition={2},
-	year={1998},
-	url={http://www.maths.manchester.ac.uk/~higham/hwms/},
-	hyphenation={english}
-}
-
-@video{HistoryOfComputers2008,
-	title={History of Computers},
-	year={2008},
-	month={9},
-	url={http://www.youtube.com/watch?v=LvKxJ3bQRKE},
-	hyphenation={english}
-}
-
-@online{IBM360,
-	title={Mainframes},
-	url={http://www.plyojump.com/classes/mainframe_era.php}
-}
-
-@book{Kopka2003,
-	author={Kopka, Helmut and Daly, Patrick William},
-	title={A Guide to \LaTeX},
-	series={Tools and Techniques for Computer Typesetting},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={2003},
-	edition={4},
-	hyphenation={english}
-}
-
-@book{Lamport1994,
-	author={Lamport, Leslie},
-	title={{LaTeX}, A Document Preparation System},
-	subtitle={User's Guide and Reference Manual},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={1994},
-	edition={2},
-	hyphenation={english}
-}
-
-@book{Lamport1995,
-	author={Lamport, Leslie},
-	title={Das {LaTeX}-Handbuch},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={1995},
-	edition={3},
-	hyphenation={german}
-}
-
-@software{LegendOfZelda1998,
-	author={Miyamoto, Shigeru and Aonuma, Eiji and Koizumi, Yoshiaki},
-	title={The Legend of Zelda: Ocarina of Time},
-	howpublished={N64-Spielmodul},
-	publisher={Nintendo},
-	year={1998},
-	hyphenation={english}
-}
-
-@manual{Lehman2016,
-	author={Lehman, Philipp and Kime, Philip and Boruvka, Audrey and Wright, Joseph},
-	title={The \texttt{biblatex} Package},
-	subtitle={Programmable Bibliographies and Citations},
-	year={2016},
-	month={11},
-	version={3.7},
-	url={http://mirrors.ctan.org/macros/latex/contrib/biblatex/doc/biblatex.pdf},
-	hyphenation={english}
-}
-
-@article{Mermin1989,
-	author={Mermin, Nathaniel David},
-	title={What's wrong with these equations?},
-	journal={Physics Today},
-	volume={42},
-	number={10},
-	year={1989},
-	pages={9-11},
-	hyphenation={english}
-}
-
-@manual{Mittelbach2016,
-	author={Mittelbach, Frank and Schöpf, Rainer and Downes, Michael and Jones, David M. and Carlisle, David},
-	title={The \texttt{amsmath} package},
-	year={2016},
-	month={11},
-	version={2.16a},
-	url={http://mirrors.ctan.org/macros/latex/required/amsmath/amsmath.pdf},
-	hyphenation={english}
-}
-
-@movie{Nosferatu1922,
-	title={Nosferatu -- A Symphony of Horrors},
-	howpublished={Film},
-	year={1922},
-	note={Drehbuch/Regie: F.\ W.\ Murnau. Mit Max Schreck, Gustav von Wangenheim, Greta Schröder.},
-	hyphenation={english}
-}
-
-@manual{Oetiker2015,
-	author={Oetiker, Tobias and Partl, Hubert and Hyna, Irene and Schlegl, Elisabeth},
-	title={The Not So Short Introduction to \LaTeXe},
-	subtitle={Or \LaTeXe in 157 minutes},
-	year={2015},
-	month={7},
-	version={5.05},
-	url={http://mirrors.ctan.org/info/lshort/english/lshort.pdf},
-	hypenation={english}
-}
-
-@misc{OoeRaumordnungsgesetz1994,
-	title={Oberösterreichisches Raumordnungsgesetz 1994},
-	howpublished={LGBl 1994/114 idF 1995/93},
-	url={http://www.ris.bka.gv.at/Dokumente/LrOO/LOO40007538/LOO40007538.pdf},
-	hyphenation={german}
-}
-
-@manual{Oostrum2016,
-	author={Oostrum, {Piet van}},
-	title={Page layout in {LaTeX}},
-	year={2016},
-	month={9},
-	url={http://mirrors.ctan.org/macros/latex/contrib/fancyhdr/fancyhdr.pdf},
-	hyphenation={english}
-}
-
-@manual{Pakin2017,
-	author={Pakin, Scott},
-	title={The Comprehensive {LaTeX} Symbol List},
-	year={2017},
-	month={1},
-	url={http://mirrors.ctan.org/info/symbols/comprehensive/symbols-a4.pdf},
-	hyphenation={english}
-}
-
-@manual{Patashnik1988,
-	author={Patashnik, Oren},
-	title={{BiBTeXing}},
-	year={1988},
-	month={2},
-	url={http://mirrors.ctan.org/biblio/bibtex/base/btxdoc.pdf},
-	hyphenation={english}
-}
-
-@movie{Psycho1960,
-	title={Psycho},
-	howpublished={Film},
-	year={1960},
-	note={Regie: Alfred Hitchcock, 
-		Drehbuch: Joseph Stefano.
-		Nach dem Roman von Robert Bloch. 
-		Mit Anthony Perkins, Vera Miles, Janet Leigh.},
-	hyphenation={english}
-}
-
-@manual{Raichle1998,
-	author={Raichle, Bernd},
-	title={Kurzbeschreibung {german.sty} und {ngerman.sty}},
-	year={1998},
-	month={7},
-	version={2.5e},
-	url={http://mirrors.ctan.org/language/german/gerdoc.pdf},
-	hyphenation={german}
-}
-
-@manual{Sommerfeldt2011,
-	author={Sommerfeldt, Axel},
-	title={Anpassen der Abbildungs- und Tabellenbeschriftungen},
-	year={2011},
-	month={11},
-	url={http://mirrors.ctan.org/macros/latex/contrib/caption/caption-deu.pdf},
-	hyphenation={german}
-}
-
-@manual{Voss2014,
-	author={Voß, Herbert},
-	title={Math mode},
-	year={2014},
-	month={1},
-	version={2.47},
-	url={http://mirrors.ctan.org/info/math/voss/mathmode/Mathmode.pdf},
-	hyphenation={english}
-}
-
-@online{WikiReliquienschrein2016,
-	url={https://de.wikipedia.org/wiki/Reliquienschrein},
-	title={Reliquienschrein},
-	year={2016},
-  month={8},
-	urldate={2017-02-28}
-}
-
-@audio{Zappa1995,
-	author={Zappa, Frank},
-	title={Freak Out},
-	howpublished={Audio-CD},
-	year={1995},
-	month={5},
-	note={Rykodisc, New York},
-	hyphenation={english}
-}
-
-@book{Sedgewick2011,
-	author={Sedgewick, Robert and Wayne, Kevin},
-	title={Algorithms},
-	publisher={Addison-Wesley},
-	location={Reading, MA},
-	year={2011},
-	edition={4},
-	hyphenation={english}
-}
-
-@software{SpringFramework,
-	title={Spring Framework},
-	url={https://github.com/spring-projects/spring-framework},
-	hyphenation={english}
-}
-
-@standard{W3C2017HTML52,
-  author={{World Wide Web Consortium}},
-  title={HTML 5.2},
-  titleaddon={W3C Candidate Recommendation},
-	date={2017-08-08},
-  url={https://www.w3.org/TR/html52/},
-	hyphenation={english}
-}
-
-@patent{Pike2008,
-	author={Pike, Dion},
-  title={Master-slave communications system and method for a network element},
-	type={US Patent},
-	holder={Alcatel-Lucent SAS},
-	number={7,460,482},
-	year={2008},
-	month={12},
-	url={https://patents.google.com/patent/US7460482}
-}
-
-@misc{Hough62,
-	author={Hough, Paul V. C.},
-	title={Method and means for recognizing complex patterns},
-	howpublished={US Patent 3,069,654},
-	year={1962},
-	month={12},
-	url={https://patents.google.com/patent/US3069654}
+@misc{noauthor_intel_2018,
+	title = {Intel® {FPGA} {SDK} for {OpenCL}™ {Pro} {Edition}  {Programming} {Guide}},
+	url = {https://www.intel.com/content/dam/www/programmable/us/en/pdfs/literature/hb/opencl-sdk/aocl_programming_guide.pdf},
+	language = {en},
+	publisher = {Intel},
+	month = sep,
+	year = {2018},
+	file = {Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:/home/gauravks/Zotero/storage/C4UM9AZC/Intel® FPGA SDK for OpenCL™ Pro Edition  Programmi.pdf:application/pdf}
 }
